--- a/src/main/resources/templates/se/customer/notitest.html
+++ b/src/main/resources/templates/se/customer/notitest.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <button onclick="sendMessage()">send</button>
+    <button onclick="sendMessage1()">send</button>
     
     <script>
         // const id = "마루";
@@ -17,6 +17,11 @@
         const sendMessage = () => {
             var message = '우히히';
             fetch(`/SOBUN/api/sse/notify/publish?message=${message}`) // 메시지 보내기
+        }
+
+        const sendMessage1 = () => {
+            var message = '찜';
+            fetch(`/SOBUN/api/sse/jjim/publish?message=${message}`) // 메시지 보내기
         }
 
         // eventSource.onmessage = (e) => { // 메시지가 왔을 때
